2001-08-07  Karl Eichwalder  <ke@suse.de>

	* po-mode.el (po-subedit-mode-menu-layout): New definition.
	(po-edit-string): Use it to provide a menu for po-subedit-mode.

2001-08-01  François Pinard  <pinard@iro.umontreal.ca>

	* po-mode.el (po-find-awk-string, po-mark-awk-string,
	po-find-bash-string, po-mark-bash-string): New functions.
	(po-preset-string-functions): Add awk and bash support.

2001-08-02  Karl Eichwalder  <ke@suse.de>

	* po-mode.el (po-find-file-coding-system-guts): Use ascii instead of
	none.
	(po-compute-counters): Don't start counting if there is not even a
	header entry.

2001-07-26  Bruno Haible  <haible@clisp.cons.org>

	* automake.diff: Update for automake-1.4-p5.

2001-08-01  François Pinard  <pinard@iro.umontreal.ca>

	* po-mode.el: Optimize testing for XEmacs.
	(po-auto-replace-revision-date): Do not quote t, as it evals to
	itself.
	(po-validate): Use the mode name instead of the constant PO to build
	the validation buffer name.
	(po-font-lock-keywords, po-find-charset,
	po-find-file-coding-system-guts, po-find-file-coding-system): Adjust
	some lines so they fit in 79 columns (pre-VT100).
	(po-compute-counters): Use string-equal instead of string=, to be
	consistent with the remainder of that code.
	(po-find-charset): Avoid infinite loop on empty file.

2000-05-31  Hrvoje Niksic  <hniksic@iskon.hr>

	* po-mode.el (po-create-overlay, po-highlight, po-rehighlight,
	po-dehighlight): Use XEmacs extent primitives.

2001-07-22  Bruno Haible  <haible@clisp.cons.org>

	* automake.diff: New file.

2001-08-02  Bruno Haible  <haible@clisp.cons.org>

	* gettextize.in: Change bug report address to
	<bug-gnu-gettext@gnu.org>.

2001-07-14  Karl Eichwalder  <ke@suse.de>

	* po-mode.el (po-mode-abbrev-table): New variable.
	(po-edit-string): Use it.

2001-07-13  Karl Eichwalder  <ke@suse.de>

	* po-mode.el (po-fade-out-entry): Replace yes-or-no-p by y-or-n-p;
	obsoleting an entry isn't fatal.

2000-01-18  François Pinard  <pinard@iro.umontreal.ca>
