@@ -1,3 +1,9 @@
+2001-08-02  Karl Eichwalder  <ke@suse.de>
+
+	* po-mode.el (po-find-charset): Drop 'interactive'. Use
+	'insert-file-contents-literally' to avoid side effects. Correct off
+	by 1 error.
+
 2001-08-07  Karl Eichwalder  <ke@suse.de>
 
 	* po-mode.el (po-subedit-mode-menu-layout): New definition.
